--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,65 @@
+appnope==0.1.0
+backports-abc==0.5
+backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
+bleach==2.1.3
 boto==2.46.1
+certifi==2016.2.28
+click==6.7
+configparser==3.5.0
+cycler==0.10.0
+decorator==4.2.1
+entrypoints==0.2.3
+enum34==1.1.6
 Flask==0.12.1
+functools32==3.2.3.post2
 gunicorn==19.6.0
+html5lib==1.0.1
+ipykernel==4.8.2
+ipython==5.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.2.1
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter-client==5.2.2
+jupyter-core==4.4.0
+MarkupSafe==1.0
 matplotlib==2.1.2
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.4.1
 numpy==1.8.2
 pandas==0.19.2
+pandocfilters==1.4.2
+pathlib2==2.3.0
+pexpect==4.4.0
+pickleshare==0.7.4
 Pillow==2.3.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2018.3
+pyzmq==17.0.0
 requests==2.13.0
+scandir==1.7
 scikit-learn==0.18.1
 scipy==0.13.3
+seaborn==0.8.1
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.11.0
+subprocess32==3.2.7
+terminado==0.8.1
+testpath==0.3.1
 Theano==0.9.0
+tornado==4.5.3
+traitlets==4.3.2
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.2.1
